<resources>
    <string name="app_name">eflyTest</string>
    <string name="login">Login</string>
    <string name="useranme">Username</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="user_register">User Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_mobile">Mobile Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_username">Update Username</string>
    <string name="change_mobile">Update Mobile Number</string>
    <string name="change_Email">Update Email Address</string>
    <string name="change_Password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update Profile</string>
</resources>
